Fixed body overflow on popup and applied blur filter in project cards when hovering

--- a/src/index.css
+++ b/src/index.css
@@ -335,7 +335,7 @@ h2{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: #3b3b3be5;
+    background: #3b3b3bbb;
     transition: .5s ease;
     border-radius: 20px;
     z-index: 1;
@@ -362,8 +362,8 @@ h2{
 .proj-cards:hover .projCards-title-desc{
     height: 100%;
 }
-.proj-cards:hover .projCards-top{
-    transform: scale(1.05);
+.proj-cards:hover .projCover{
+    filter: blur(3px);
 }
 .viewProj{
     margin-top: 15px;
